--- a/sumann/index.html
+++ b/sumann/index.html
@@ -56,11 +56,11 @@
     <div class="container">
         <h1>提出遅延のお詫び</h1>
         <img src="image/OIP.jpg" alt="">
-        <p>担当の先生へ</p>
+        <p>近藤先生へ</p>
         <p>この度は、課題の提出期限を誤って認識し、提出が遅れてしまいましたことを深くお詫び申し上げます。</p>
         <p>今後はこのようなミスがないよう、しっかりと期限管理を徹底し、誠実に取り組んでまいります。ご迷惑をおかけして申し訳ございません。</p>
         <p>引き続きご指導のほど、何卒よろしくお願い申し上げます。</p>
-        <button class="button" onclick="window.location.href='https://pomeraniann111.github.io/test1/cafe';">詳細はこちら</button>
+        <button class="button" onclick="window.location.href='https://pomeraniann111.github.io/test1/cafe';">なんか</button>
     </div>
 </body>
 </html>
